feat: Calculate resistance in parallel circuit
# Question 1

--- a/lab_1.ipynb
+++ b/lab_1.ipynb
@@ -18,6 +18,51 @@
     "\n",
     "Addition of any further functionality is up to you but the following functions must be included:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Write a function, `parallel()`, that, when called, prints the effective resistance of a network of resistors connected in parallel. The function should be able to accept a single **list** as argument.\n",
+    "    \n",
+    "    Use the example provided below to test the functionality of your function. ie, copy the line below into your python script to call the function you wrote. \n",
+    "    \n",
+    "    ```python\n",
+    "    parallel([330, 1000, 2200])\n",
+    "    ```\n",
+    "    \n",
+    "    Your script should print the following:\n",
+    "    \n",
+    "    ```python\n",
+    "    \"222.973 ohms\"\n",
+    "    ```\n",
+    "(5 marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resistance: 222.97 Ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "def parallel(resistors: list[int | float]) -> float:\n",
+    "    sum = 0\n",
+    "    for resistor in resistors :\n",
+    "        sum = sum + (1/resistor)\n",
+    "    resistance = 1/sum\n",
+    "    return resistance\n",
+    "\n",
+    "resistance = parallel([330, 1000, 2200])\n",
+    "print(f\"Resistance: {resistance:.2f} Ohms\")"
+   ]
   }
  ],
  "metadata": {
