feat: Assess patients' temperature

--- a/lab_1.ipynb
+++ b/lab_1.ipynb
@@ -63,6 +63,61 @@
     "resistance = parallel([330, 1000, 2200])\n",
     "print(f\"Resistance: {resistance:.2f} Ohms\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Write a function, `temperature_check()`, that accepts a single number, a patient's body temperature, and a single character, the unit of temperature. The function should output whether the patient is hypothermic, hyperthermic or has normal body temperature based on the number passed to the function. \n",
+    "    \n",
+    "    The second value passed as argument should tell the function whether the condition should calculated in degrees celcius or degrees fahrenheit.\n",
+    "    \n",
+    "    An appropriate message should be written to the screen with the result. You’re free to use what ever reasonable temperature limits you feel will adequately act as boundaries for these conditions.\n",
+    "    \n",
+    "    eg. \n",
+    "    \n",
+    "    ```python\n",
+    "    > temperature_check(14, \"C\")\n",
+    "    > \"the patient is hypothermic\"\n",
+    "    \n",
+    "    > temperature_check(37, \"C\")\n",
+    "    > \"the patient's temperature is normal\"\n",
+    "    \n",
+    "    > temperature_check(37, \"F\")\n",
+    "    > \"the patient is hypothermic\"\n",
+    "    ```\n",
+    "    \n",
+    "    (5 marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def temperature_check(temp: float, degrees: str) -> str:\n",
+    "    if degrees == \"F\":\n",
+    "        if temp < 95:\n",
+    "            return \"the patient is hypothermic\"\n",
+    "        elif temp > 104:\n",
+    "            return \"the patient is hyperthermic\"\n",
+    "        else:\n",
+    "            return \"the patient's temperature is normal\"\n",
+    "    elif degrees == \"C\":\n",
+    "        if temp < 35:\n",
+    "            return \"the patient is hypothermic\"\n",
+    "        elif temp > 40:\n",
+    "            return \"the patient is hyperthermic\"\n",
+    "        else:\n",
+    "            return \"the patient's temperature is normal\"\n",
+    "    else:\n",
+    "        return \"Invalid input degrees must be either F or C\"\n",
+    "\n",
+    "temperature_check(14, \"C\")\n",
+    "temperature_check(37, \"C\")\n",
+    "temperature_check(37, \"F\")"
+   ]
   }
  ],
  "metadata": {
