--- a/lab_1.ipynb
+++ b/lab_1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Write a function, `temperature_check()`, that accepts a single number, a patient's body temperature, and a single character, the unit of temperature. The function should output whether the patient is hypothermic, hyperthermic or has normal body temperature based on the number passed to the function. \n",
+    "2. Write a function, `potential_divider()`, that takes __two values__ as argument: a number that represents a voltage supply value, and a __list__ of numbers that represent resistance values of resistors connected in series. The function should output the voltage drop across each resistor in your resistor __list__. The function should be able to accept a list of any length.\n",
+    "\n",
+    "eg.\n",
+    "```python\n",
+    "> potential_divider(9, [3000, 1000])\n",
+    "> \"6.75v\"\n",
+    "> \"2.25v\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Resistance: 4000.00 Ohms\n",
+      "V_R0: 6.75\n",
+      "V_R1: 2.25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[6.75, 2.25]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def potential_divider(voltage, resistors: list[int | float]) -> list[float]:\n",
+    "    vdrops = []\n",
+    "    rtotal = sum(resistors)\n",
+    "    for res in resistors:\n",
+    "        vdrops.append(voltage * (res/ rtotal))\n",
+    "        print(f\"V_R{vdrops.index(vdrops[-1])}: {vdrops[-1]}\")\n",
+    "    return vdrops\n",
+    "\n",
+    "potential_divider(9, [3000, 1000])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Write a function, `temperature_check()`, that accepts a single number, a patient's body temperature, and a single character, the unit of temperature. The function should output whether the patient is hypothermic, hyperthermic or has normal body temperature based on the number passed to the function. \n",
     "    \n",
     "    The second value passed as argument should tell the function whether the condition should calculated in degrees celcius or degrees fahrenheit.\n",
     "    \n",
@@ -92,9 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the patient is hypothermic'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def temperature_check(temp: float, degrees: str) -> str:\n",
     "    if degrees == \"F\":\n",
@@ -118,6 +180,11 @@
     "temperature_check(37, \"C\")\n",
     "temperature_check(37, \"F\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
